src/objects/EmailMessage.object
<CustomObject>
    <fields>
        <fullName>wbsendit__Smart_Email_Id__c</fullName>
        <label>Smart Email Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Smart_Email_Message_Id__c</fullName>
        <externalId>true</externalId>
        <label>Smart Email Message Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Smart_Email_Status__c</fullName>
        <label>Smart Email Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>